tests/parser/fail/super-block-param.som
"test:
fail-message:
  - contains: define
  - contains: super
"

SuperBlockParam = (
  test = (
    [ :super | 42 ] value.
  )
)
